--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://openeo.org/" # the base hostname & protocol for your site
 twitter_username: Open_EO
 github_username:  Open-EO
+youtube_channel: UCMJQil8j9sHBQkcSlSaEsvQ
+youtube_name: openEO
 
 # Build settings
 markdown: kramdown
