--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,7 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
 title: openEO
-email: edzer.pebesma@uni-muenster.de
-description: > # this means to ignore newlines until "baseurl:"
-  openEO develops an open API to connect R, python and javascript clients 
-  to big Earth observation cloud back-ends in a simple and unified way.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://openeo.org/" # the base hostname & protocol for your site
-twitter_username: Open_EO
-github_username:  Open-EO
-youtube_channel: UCMJQil8j9sHBQkcSlSaEsvQ
-youtube_name: openEO
-chat: "https://openeo-chat.eodc.eu/channel/public"
-
-# Build settings
+description: openEO develops an open API to connect R, python and javascript clients to big Earth observation cloud back-ends in a simple and unified way.
+url: "http://openeo.org/"
+theme: jekyll-theme-minimal
 markdown: kramdown
-
-# Plugin for redirects
 plugins:
   - jekyll-redirect-from
