Minor improvements to homepage.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: openEO
-description: openEO develops an open API to connect R, python and javascript clients to big Earth observation cloud back-ends in a simple and unified way.
+description: openEO develops an open API to connect various clients to big EO cloud back-ends in a simple and unified way.
 theme: jekyll-theme-minimal
 markdown: kramdown
 
