--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
 		"vuepress-plugin-check-md": "0.0.2",
 		"vuepress-plugin-code-copy": "^1.0.4",
 		"vuepress-plugin-code-switcher": "^1.0.2"
+	},
+	"scripts": {
+		"prepare": "node .vuepress/prepare.js",
+		"build": "npm run prepare && vuepress build",
+		"dev": "npm run prepare && vuepress dev",
+		"check-links": "npm run prepare && vuepress check-md"
 	}
 }
