Update client library guidelines, changed CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ deploy:
   github-token: $GITHUB_TOKEN
   local-dir: .vuepress/dist
   keep-history: true
-  committer-from-gh: true
+  name: openEO CI
+  email: openeo.ci@uni-muenster.de
   on:
     branch: master
