--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 before_deploy:
 - npm run build
 - cp CNAME .vuepress/dist/CNAME
+- cp -a redirects .vuepress/dist
 
 deploy:
   provider: pages
