--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_deploy:
 - npm run build
 - cp CNAME .vuepress/dist/CNAME
 - cp -ap redirects/. .vuepress/dist
+- cp -ap .vuepress/dist/assets/documentation/. .vuepress/dist/documentation
+- rm -r .vuepress/dist/assets/documentation
 
 deploy:
   provider: pages
