--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"scripts": {
 		"prepare": "node .vuepress/prepare.js",
 		"build": "npm run prepare && vuepress build",
-		"dev": "npm run prepare && vuepress dev",
+		"start": "npm run prepare && vuepress dev",
 		"test": "npm run prepare && vuepress check-md"
 	}
 }
