--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,10 +9,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - uses: actions/checkout@v2
+          node-version: 'lts/*'
+      - uses: actions/checkout@v3
         with:
           submodules: true
       - run: npm install
